fix navbar z-index + favicon test

--- a/styles/scss/_navbar.scss
+++ b/styles/scss/_navbar.scss
@@ -1,9 +1,12 @@
 .navbar {
   width: 100%;
-  height: 100%;
   min-width: 375px;
   flex-direction: column;
   position: absolute;
+}
+
+.navbar.full-height {
+  height: 100%;
 }
 
 .navbar-top {
