--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,10 +95,13 @@ button:active {
 
 .navbar {
   width: 100%;
-  height: 100%;
   min-width: 375px;
   flex-direction: column;
   position: absolute;
+}
+
+.navbar.full-height {
+  height: 100%;
 }
 
 .navbar-top {
